# statguardian

./: .gitignore  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PRESS_RELEASE_DISTRIBUTION.md  README.md  SECURITY.md  install.sh
crates/statguard-core/src/parser/: grammar.pest  mod.rs
crates/statguard-io/: Cargo.toml
crates/statguard-io/src/: cloud.rs  lib.rs  sql.rs
crates/statguard-validators/src/: rules.rs
docs/: FORMAT_COMPATIBILITY.md
docs/bench/: benchmark.py
examples/: basic_validation.sg  ecommerce_orders.sg  python_quickstart.py
python/statguard/: __init__.py  _connectors.py  _integrity.py
