[package]
name        = "statguard-io"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Data ingestion (Parquet, CSV, JSON, Arrow, Avro, ORC, Delta Lake, Iceberg, S3, GCS, Azure, SQL)"

[dev-dependencies]
tempfile = "3"

[features]
default = []

# ── Cloud storage (all open-source SDKs: Apache-2.0 / MIT) ──────────────────
# Enables Polars lazy readers for s3://, gs://, az:// URIs.
s3     = ["polars/aws"]       # AWS S3 + S3-compatible (MinIO, Ceph, Cloudflare R2)
gcs    = ["polars/gcp"]       # Google Cloud Storage (polars feature name: gcp)
azure  = ["polars/azure"]     # Azure Blob Storage / ADLS Gen2
cloud  = ["s3", "gcs", "azure"]

# ── SQL databases (pure-Rust drivers, MIT/Apache-2.0, no ODBC) ──────────────
# NOTE: Oracle and SQL Server are intentionally excluded — their official
# drivers require proprietary ODBC/JDBC components (non-open-source).
# Use the Python execute_sql() API with connectorx (MIT) for those if needed.
sql-postgres = ["dep:sqlx", "dep:tokio", "sqlx/postgres"]
sql-mysql    = ["dep:sqlx", "dep:tokio", "sqlx/mysql"]
sql-sqlite   = ["dep:sqlx", "dep:tokio", "sqlx/sqlite"]
sql          = ["sql-postgres", "sql-mysql", "sql-sqlite"]

# ── Lakehouse formats ────────────────────────────────────────────────────────
delta     = ["dep:tokio"]
iceberg   = ["dep:tokio"]
lakehouse = ["delta", "iceberg"]

# ── Convenience bundles ──────────────────────────────────────────────────────
full = ["cloud", "sql", "lakehouse"]

[dependencies]
statguard-core = { path = "../statguard-core" }
polars         = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
anyhow         = { workspace = true }

# SQL: pure-Rust, MIT/Apache-2.0 — no ODBC/JDBC
sqlx  = { version = "0.8", default-features = false,
           features = ["runtime-tokio-rustls", "macros"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
